--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -2,23 +2,82 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
-.container {
+
+#header {
+    font-size: 2.75rem;
+}
+
+
+.body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 20px 400px;
 }
 
-.submit {
-    transition: background-color .3s, box-shadow .3s;
-    
-    padding: 12px 16px 12px 42px;
-    border: none;
-    border-radius: 3px;
-    box-shadow: 0 -1px 0 rgba(0, 0, 0, .04), 0 1px 1px rgba(0, 0, 0, .25);
-    
-    color: #757575;
-    font-size: 14px;
-    font-weight: 500;
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+}
+
+.submit-form {
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    text-align: center;
+    margin-bottom: 2rem;
+}
+.submit-bar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin:0 auto;
+    width:200px;
+    border-radius:25px;
+    border:1px solid #a19f9f;
+    background-color: #ffffff;
+}
+
+.submit-text-bar{
+    background-color: #ffffff;
+    height:30px;
+    border:none;
+    width:100px;
+    font-size:16px;
+    outline: none; 
+}
+
+.bar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin:0 auto;
+    width:575px;
+    border-radius:30px;
+    border:1px solid #dcdcdc;
+    background-color: #ffffff;
+}
+
+.search-bar{
+    background-color: #ffffff;
+    height:45px;
+    border:none;
+    width:500px;
+    font-size:16px;
+    outline: none; 
+}
+
+
+#loading {
+    width: 64px;
+    height: 64px;
+    object-fit: cover;
+    display: none;
+    background: url(/static/spinner.gif) no-repeat;
+    cursor: wait;
+}
+
+#transcript  {
+    /* padding: 0px 100px !important; */
+    max-width: 800px !important;
 }
