--- a/templates/index.html
+++ b/templates/index.html
@@ -20,21 +20,58 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <div class="container">
-            <h1>Speech2Text</h1>
-            <form class="container" action="/" method = "POST">
-                <p>Youtube Link <br/> <br/> <input type = "text" name = "youtube_link" /></p>
-                <p><input class="submit" type = "submit" value = "Submit" /></p>
+        <div class="body">
+            <h1 id="header">Speech2Text</h1>
+            <form class="submit-form" action="/" method="POST">
+                <p style="margin-bottom: 1rem">
+                    Paste YouTube link here...
+                    <div class="bar">
+                        <input class="search-bar" type="text" name="youtube_link" />
+                    </div>
+                </p>
+                <div class="submit-bar">
+                    <input class="submit-text-bar" type="submit" value="Submit" onclick="loading();"/>
+                </div>
             </form>
-            <p>{{ youtube_link }}</p>
-            <img src="{{ thumbnail }}"/>
-            <p>{{ youtube_response }} </p>
-            <p>{{ loading }}</p>
+            <div id="loading"><img src="{{ url_for('static',filename='spinner.gif') }}"></div>
+            {% if video %}
             <div class="container" >
-                <h1> Trasncript </h1>
-                <span>{{ transcript }}</span>
+                <div id="content">
+                    <h2> YouTube Video Details </h2>
+
+                    <p>{{ youtube_link }}</p>
+
+                        <img src="{{ video.thumb }}"/>
+                        <p>Title: {{ video.title }} </p>
+                        <p>User: {{ video.username }} </p>
+                        <p>Views: {{ video.viewcount }} </p>
+                        <p>Likes: {{ video.likes }} </p>
+                        <p>Duration: {{video.duration}} </p>
+
+                    <p>{{ loading }}</p>
+                    <h2> Transcript </h2>
+                    <div id="transcript">
+                        <span>{{ transcript }}</span>
+                    </div>
+                </div>
+            </div>
+            {% endif %}
+            <div class="container">
+                <p></p>
+            </div>
+            <div class="container">
+                <p></p>
             </div>
         </div>
-        <script src="" async defer></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>         <script language="JavaScript" type="text/javascript" src="/js/jquery-ui-personalized-1.5.2.packed.js"></script>
+
+        <script type="text/javascript">
+            let loaded = false
+            function loading() {
+                $("#loading").show()
+                $("#content").hide()
+            }
+        </script>
+        
     </body>
 </html>
